# gnu_build_hello

./: .gitignore  README.md  configure.ac
src/: Makefile.am  Makefile.in  config.h.in  main.c  main.h
src/foobarmodule/: Makefile.am  Makefile.in  config.h.in  foobar.c  foobar.h
src/plugins/a/: Makefile.am  a.c
src/plugins/b/: Makefile.am  b.c
